# Aideal

./: .gitignore  AGENTS.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  main.py  runtime_compat.py
backend/app/consolidacao/: __init__.py  merger.py
backend/app/contracts/: __init__.py  common.py  dre.py  fluxo_caixa.py  persistence.py  processamento.py
backend/app/db/: __init__.py  connection.py  manager.py
backend/app/exportacao/: __init__.py  exporter.py
backend/app/ingestao/: __init__.py  dre_ingestao.py  fluxo_caixa_ingestao.py  parser.py
backend/app/migrations/: V1__create_dre_tables.sql  V2__dedupe_upload_by_hash_and_competencia.sql  V3__create_fluxo_caixa_tables.sql  V4__create_contas_gerenciais.sql  V5__create_dre_indicadores_manuais.sql  V6__create_fluxo_indicadores_manuais.sql
backend/app/processamento/: __init__.py  competencia.py  dashboard.py  dre.py  dre_from_xls.py  dre_geracao.py  dre_geracao_completa.py  fluxo_caixa.py  fluxo_caixa_db.py  paineis.py
backend/app/repository/: __init__.py  base.py  centro_custo_match.py  contas_gerenciais.py  dre_indicadores_manuais.py  dre_repository.py  fluxo_indicadores_manuais.py  fluxo_repository.py
backend/app/templates/: __init__.py  integrity.py  (+2 more)
backend/config/: dre_mapping.json  fluxo_mapping.json
backend/tests/: conftest.py  test_admin_auth.py  test_centro_custo_match.py  test_competencia_detector_api.py  test_dashboard_resumo_api.py  test_dre_api_e2e.py  test_dre_geracao_api.py  test_dre_geracao_completa_service.py  test_dre_ingestao_service.py  test_dre_processamento.py  test_dre_transform.py  test_dre_validacao_natureza.py  test_exporter.py  test_fluxo_api_e2e.py  test_fluxo_db_service.py  test_fluxo_processamento_template.py  test_fluxo_transformer.py  test_fluxo_validator.py  test_paineis_api.py  test_parser.py  test_production_hardening.py  test_repository.py  test_safe_conversions.py  test_subir_producao_script.py  test_template_writer.py  test_transformer.py  test_validators_comprehensive.py
(+155 files in other folders)
