[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aideal-mvp"
version = "1.0.0"
description = "MVP AIDEAL GoFlowOS - Motor de consolidação financeira DRE e Fluxo de Caixa"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "et_xmlfile==2.0.0",
    "xlrd==2.0.2",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "reportlab>=4.2.0",
    "pypdf>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["config*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
